# takuma_llm_toolkit

./: .bumpversion.cfg  .gitignore  Config.toml  README.md  main.py  my_hosts  pyproject.toml  run_embedding.py  run_llm.py  success_model_list.txt
.github/workflows/: auto-bump-version.yml  publish.yml
shell_scripts/: run_llm_once.sh  test_models_sbatch.sh
takuma_llm_toolkit/: __init__.py  cli.py  cli_args.py  constants.py  embedding.py  text_generator.py
takuma_llm_toolkit/utils/: __init__.py  llm_config.py  load.py
test/: test_models.py
