[project]
name = "takuma-llm-toolkit"
version = "0.1.11"
description = "LLM推論のためのユーティリティ集"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0",
    "torch",
    "transformers>=4.40",
    "vllm>=0.4.0",
    "openai>=1.30.0",
    "accelerate>=1.11.0",
    "mistral-common>=1.8.5",
    "mistral-inference>=1.6.0",
]

# メタデータ（必要に応じて編集してください）
authors = [{ name = "takuma-s" }]
keywords = ["llm", "nlp", "transformers", "vllm", "openai"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
takuma-llm = "takuma_llm_toolkit.cli:main"

[tool.setuptools.packages.find]
include = ["takuma_llm_toolkit*"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"
